--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.bill.android.myapplication.MainActivity">
+<LinearLayout
+    xmlns:android2="http://schemas.android.com/apk/res/android"
+    android2:layout_width="match_parent"
+    android2:layout_height="match_parent"
+    android2:orientation="vertical">
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/viewMain" />
-</RelativeLayout>
+        android2:layout_width="match_parent"
+        android2:layout_height="wrap_content"
+        android2:textSize="20dp"
+        android2:text="Username"/>
+
+    <EditText
+        android2:id="@+id/editTextUserName"
+        android2:layout_width="match_parent"
+        android2:layout_height="wrap_content"
+        />
+
+    <TextView
+        android2:layout_width="match_parent"
+        android2:layout_height="wrap_content"
+        android2:textSize="20dp"
+        android2:text="Password"/>
+
+    <EditText
+        android2:id="@+id/editTextPassword"
+        android2:layout_width="match_parent"
+        android2:inputType="textPassword"
+        android2:layout_height="wrap_content"/>
+
+    <Button
+        android2:id="@+id/btnLogin"
+        android2:layout_width="match_parent"
+        android2:layout_height="wrap_content"
+        android2:text="@string/btn_login"
+        />
+
+    <TextView
+        android2:id="@+id/txtViewResult"
+        android2:textSize="20dp"
+        android2:layout_width="match_parent"
+        android2:layout_height="wrap_content"/>
+</LinearLayout>
